# talks

./: .buildinfo  .gitignore  README.md  abstract.html  aibs.html  defense.html  edit-retrospective-pitches.html  example.qmd  genindex.html  index.html  introduction.html  objects.inv  pyproject.toml  references.html  search.html  searchindex.js  si.html  slides.html
.github/workflows/: deploy.yml
docs/: _config.yml  _toc.yml  slides.md
docs/slides/: manifest.txt
images/: README.html
sandbox/: edit_retrospective_evaluation.py
shell/: make_poster.sh  make_slides.sh
slides/: README.html  manifest.txt
slides/2023-03-06-committee-meeting/: 2023-03-06-committee-meeting.html  2023-03-06-committee-meeting.md
slides/2025-03-25-brain-science-seminar/: 2025-03-25-brain-science-seminar.html  2025-03-25-brain-science-seminar.md
slides/aibs/: aibs.html  aibs.md
slides/berlin-2024/: berlin-2024.html  berlin-2024.md
slides/capocaccia/: capocaccia.html
slides/croissants/: croissants.html
slides/defense/: defense.html
slides/edit-retrospective/: edit-retrospective-lab-meeting-2024-02-09-cep.html  edit-retrospective-lab-meeting-2024-02-09-cep.md  edit-retrospective-outline.html  edit-retrospective-outline.md  edit-retrospective-pitches-old.html  (+1 more)
slides/edit-retrospective-pitches/: edit-retrospective-lab-meeting-2024-01-23.html  edit-retrospective-pitch-clean.html  edit-retrospective-pitches-old.html  edit-retrospective-pitches.html  old-edit-retrospective-pitches.html
slides/edit-retrospective-qmd/: edit-retrospective-lab-meeting-2024-01-23.html
(+66 files in other folders)
