[tool.poetry]
name = "talks"
version = "0.1.0"
description = ""
authors = ["Benjamin D. Pedigo <bpedigo@jhu.edu>"]

[tool.poetry.dependencies]
python = "3.11.*"
umap-learn = "^0.5.1"
anytree = "^2.8.0"
graspologic = "^3.0.0"
statsmodels = "^0.13.0"
jupyter-client = "6.1.12" # https://github.com/jupyter/jupyter_client/issues/637
svgutils = "^0.3.4"
ipykernel = "^6.27.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.2"
rope = "^0.20.1"
jupyter = "^1.0.0"
jupyter-book = "^0.12.1"
jupytext = "^1.13.8"
ghp-import = "^2.0.1"
ipykernel = "^6.6.0"
